<resources>
    <string name="app_name">ChristmasSMS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="transition">v</string>
    <string name="featured">Featured</string>
    <string name="peace_and_happiness">Peace and Happiness</string>
    <string name="inspiration_and_blessings">Inspiration and Blessings</string>
    <string name="thanks_giving">Thanks Giving</string>
    <string name="love_and_romance">Love and Romance</string>
    <string name="friendship">Friendship</string>
    <string name="shortlisted">Shortlisted</string>
</resources>
