<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/featured"
            android:icon="@drawable/ic_7"
            android:title="@string/featured" />
        <item
            android:id="@+id/peace"
            android:icon="@drawable/ic_1"
            android:title="@string/peace_and_happiness" />
        <item
            android:id="@+id/inspiration"
            android:icon="@drawable/ic_2"
            android:title="@string/inspiration_and_blessings" />
        <item
            android:id="@+id/thanks"
            android:icon="@drawable/ic_3"
            android:title="@string/thanks_giving" />
        <item
            android:id="@+id/love"
            android:icon="@drawable/ic_4"
            android:title="@string/love_and_romance" />
        <item
            android:id="@+id/friend"
            android:icon="@drawable/ic_5"
            android:title="@string/friendship" />
        <item
            android:id="@+id/shortListed"
            android:icon="@drawable/ic_6"
            android:title="@string/shortlisted" />
    </group>

</menu>
